Correct stats bar from shifting when redeemable img is clicked

--- a/client/src/components/redeemable/stats/Stats.css
+++ b/client/src/components/redeemable/stats/Stats.css
@@ -1,80 +1,90 @@
 
 /* STATS */
 
-.stats {
+.statsContainer {
     position: absolute;
     right: 0;
     bottom: 0;
+    width: 100%;
+    height: 48px;
 
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    height: 60px;
-    background-color: #212c3d;
-    font-size: .8em;
 }
 
-
-.stats div {
+.levelContainer {
     display: flex;
+    width: 100%;
+    height: 48px;
     flex-direction: row;
     align-items: center;
-    flex-grow: 1;
-
-    color: rgba(0, 0, 0, 1);
 }
 
-
-.lvl {
-    position: relative;
-    right: 100px;
-}
-
-.lvlContainer {
-    width: 57px;
-    height: 27px;
+.level {
+    width: 50px;
+    height: 20px;
     background-color: white;
-    border-radius: 20px;
-}
-
-.lvlContainer span {
-    padding-left: 10px;
     color: #171e2a;
     font-size: 11px;
     font-weight: bold;
+    border-radius: 20px;
+    line-height: 15px;
+    text-align: center;
     cursor: default;
+    margin: 0px 12px;
 }
 
-.sparkContainer,
-.emberContainer {
+.level span {
+    line-height: 20px;
+}
+
+.balanceContainer {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
+}
+
+.sparkContainer, .emberContainer {
+    display: flex;
+    align-items: center;
+    margin-right: 8px;
+    padding: 4px;
+    cursor: default;
+    border-radius: 4px;
     background-color: rgba(31, 186, 237, .2);
-    border-radius: 6px;
-    padding: 2px 4px;
-    margin: 0 3px;
-    border: 3px solid transparent;
+    height: 28px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 19px;
 }
 
-.sparkContainer span,
-.emberContainer span,
+.sparkContainer img,
+.emberContainerimg {
+    width: 1.4em;
+    height: 1.4em;
+    margin-right: 0.25em;
+}
+
+
 .emberContainer button {
-    color: rgba(255,255,255,1);
-    margin: 0 3px;
+    width: 1em;
+    height: 1em;
+    font-size: 1em;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    margin-left: 4px;
+    height: 28px;
+    width: 28px;
+    border-radius: 4px;
+    background-color: #dd208a;
+    border: 0;
 }
 
-.emberContainer button {
-    border: none;
-    box-shadow: none;
-    background-color: rgba(221, 32, 138, 1);
-    border-radius: 3px;
-}
-
-.emberContainer:hover {
-    border: 3px groove rgba(86, 179, 241, 0.4);
-}
-
-.stats img {
-    width: 16px;
-    height: 16px;
-    padding: 2px 4px;
+.emberContainer span {
+    color: #fff;
 }
